# mvt-rs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DOCKER_README.md  Dockerfile  LICENSE  README.es.md  README.md  TUTORIAL.es.md  TUTORIAL.md  build.rs  config.example.yaml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  rust.yml
.github/workflows/deployment/release/freebsd/: action.yml
.github/workflows/deployment/release/linux/: action.yml
.github/workflows/deployment/release/macos/: action.yml
.github/workflows/deployment/release/windows/: action.yml
docker-example/: Dockerfile  docker-compose.yml
docs/: clustering.md  plugins.md
docs/superpowers/plans/: 2026-06-22-multi-instance-config-sync.md  2026-06-23-multi-instance-clustering.md  2026-07-08-tilejson-service.md  2026-07-09-tutorial-reorganization.md  2026-07-11-name-normalization.md  2026-07-12-maplibre-style-validation.md  2026-07-15-no-cache-cli-flag.md
docs/superpowers/specs/: 2026-06-23-multi-instance-clustering-design.md  2026-07-05-cluster-plugin-sync-design.md  2026-07-08-tilejson-service-design.md  2026-07-09-tutorial-reorganization-design.md  2026-07-11-name-normalization-design.md  2026-07-12-maplibre-style-validation-design.md  2026-07-15-mbtiles-static-layers-design.md  2026-07-15-no-cache-cli-flag-design.md
examples/: leaflet.html  maplibre.html  openlayers.html
freebsd/: README.md
freebsd/rc.d/: mvtserver
locales/: en-US.ftl  es-AR.ftl  es-ES.ftl  fr-FR.ftl  it-IT.ftl  pt-BR.ftl
migrations/: 20250306020746_init.sql  20250306025640_add_abstract.sql  20250325235608_max_record.sql  20260422204051_add_database_to_layers.sql  20260515131918_system_settings.sql  20260623120000_config_version.sql
plugin-examples/: README.md  area_threshold.lua  category_audit_log.lua  maintenance_blackout.lua  status_filter.lua  time_window.lua  user_access.lua  zoom_density.lua
src/: args.rs  auth.rs  cache.rs  cachewrapper.rs  catalog.rs  category.rs  config.rs  database.rs  db.rs  diskcache.rs  error.rs  filters.rs  health.rs  html.rs  i18n.rs  main.rs  monitor.rs  rediscache.rs  routes.rs  storage.rs  styles.rs  tiles.rs
src/api/: auth.rs  catalog.rs  database.rs  mod.rs  plugins.rs  users.rs
src/auth/: handlers.rs  mod.rs  models.rs  tests.rs  utils.rs
src/cache/: cachewrapper.rs  disk.rs  mod.rs  redis.rs
src/cli/: config.rs  mod.rs  prompts.rs
src/cluster/: api.rs  backend.rs  bootstrap.rs  mod.rs  snapshot.rs  watcher.rs
src/common/: error.rs
src/config/: categories.rs  consts.rs  db.rs  groups.rs  layers.rs  mod.rs  settings.rs  styles.rs  system_settings.rs  test_support.rs  users.rs
src/db/: connection.rs  metadata.rs  mod.rs  tests.rs
src/filters/: builder.rs  mod.rs  parser.rs  tests.rs  types.rs
src/html/: assets.rs  catalog.rs  errors.rs  main.rs  maps.rs  mod.rs  pages.rs  styles.rs  utils.rs
src/html/admin/: catalog.rs  categories.rs  dashboard.rs  database.rs  groups.rs  main.rs  mod.rs  plugins.rs  styles.rs  users.rs
src/models/: catalog.rs  category.rs  mod.rs  styles.rs
src/monitor/: collector.rs  handlers.rs  metrics.rs  mod.rs
src/mvt_admin/: args.rs  db.rs  main.rs
src/mvt_server/: args.rs  auth.rs  catalog.rs  database.rs  db.rs  diskcache.rs  main.rs  rediscache.rs  storage.rs  tiles.rs
src/mvt_server/api/: catalog.rs  database.rs  users.rs
src/mvt_server/html/admin/: catalog.rs  database.rs  main.rs  mod.rs  users.rs
src/plugins/: mod.rs  watcher.rs
src/services/: health.rs  legends.rs  mod.rs  styles.rs  tests.rs  tilejson.rs  tiles.rs  utils.rs
src/services/tiles/: builder.rs  handlers.rs  mod.rs  tests.rs
static/css/: input.css  roboto.css  style.css  tailwind.css
static/js/: maplibre-gl-layers-control.min.js  mvt.js  style-validator.js
templates/: catalog.html  changepassword.html  error.html  error404.html  error_layout.html  index.html  layout.html  layout_minimal.html  login.html  map.html  maplayer.html  mapview.html  mapview_minimal.html  styles.html
templates/admin/: catalog.html  editlayer.html  edituser.html  index.html  layout_admin.html  list_users.html  newlayer.html  newuser.html  plugins.html  users.html
templates/admin/catalog/: catalog.html  table.html
templates/admin/catalog/layers/: edit.html  new.html
templates/admin/categories/: categories.html  edit.html  new.html
templates/admin/database/: fields.html  schemas.html  srid.html  tables.html
templates/admin/groups/: edit.html  groups.html  new.html
templates/admin/monitor/: dashboard.html
templates/admin/styles/: edit.html  new.html  styles.html
templates/admin/users/: edit.html  new.html  users.html
templates/catalog/: catalog.html  table.html
templates/glyphs/: index.html
templates/mapview/: _mapview_content_body.html  _mapview_content_head.html  _mapview_content_scripts.html
templates/sprites/: index.html
templates/styles/: styles.html  table.html
tests/integration/: health_test.rs
