[package]
name = "mvt-server"
version = "0.14.4"
edition = "2024"
authors = ["Jose Jachuf <jjachuf@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.18.0", features = ["v4", "fast-rng"] }
dotenvy = "0.15.0"
clap = "4.5"
bytes = "1.10"
argon2 = { version = "0.5", features = ["std"] }
askama = "0.14"
thiserror = "2"
base64 = "0.22"
time = { version = "0.3", features = ["serde"] }
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }

salvo = { version = "0.84", features = ["cors", "logging", "cache", "basic-auth", "jwt-auth", "sse", "serve-static", "session"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = {version="0.3", features = ["json", "env-filter"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls" , "postgres", "sqlite", "migrate" ] }

inquire = { version = "0.9.1"}
crossterm = "0.29"

redis = { version = "0.32", features = ["tokio-comp"] }
bb8 = "0.9"
bb8-redis = "0.24"
include_dir = {version = "0.7.4", features = ["glob"] }
regex = "1.11.1"
html-escape = "0.2"

fluent = "0.17"
fluent-syntax = "0.12"
unic-langid = "0.9"
accept-language = "3.1"

maplibre-legend = "0.4.3"
# maplibre-legend = { path = "../maplibre-legend"}

tokio-stream = { version = "0.1", features = ["net"] }
prometheus = "0.14"
sysinfo = { version = "0.37", features = [] }
futures = "0.3"
libc = "0.2"
mime_guess = "2.0.5"

[build-dependencies]


[profile.release]
# opt-level = 'z' # Optimize for size
# lto = true
# codegen-units = 1

lto = true
strip = true
opt-level = 's'
codegen-units = 3
