[package]
name = "mvt-server"
version = "0.15.5"
edition = "2024"
authors = ["Jose Jachuf <jjachuf@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.20", features = ["v4", "fast-rng"] }
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }
bytes = "1.11"
argon2 = { version = "0.5", features = ["std"] }
askama = "0.15"
thiserror = "2"
base64 = "0.22"
time = { version = "0.3", features = ["serde"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

salvo = { version = "0.89", features = ["affix-state", "cors", "logging", "cache", "basic-auth", "jwt-auth", "sse", "serve-static", "session"] }
tokio = { version = "1", features = ["macros", "signal"] }
tracing = "0.1"
tracing-subscriber = {version="0.3", features = ["json", "env-filter"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls" , "postgres", "sqlite", "migrate" ] }

inquire = { version = "0.9.3"}
crossterm = "0.29"

redis = { version = "1.0.3", features = ["tokio-comp"] }
bb8 = "0.9"
bb8-redis = "0.26"
include_dir = {version = "0.7.4", features = ["glob"] }
regex = "1.12"
html-escape = "0.2"

fluent = "0.17"
fluent-syntax = "0.12"
fluent-bundle = "0.16.0"
intl-memoizer = "0.5.3"
unic-langid = "0.9"
accept-language = "3.1"

maplibre-legend = "0.4.4"
# maplibre-legend = { path = "../maplibre-legend"}

tokio-stream = { version = "0.1", features = ["net"] }
prometheus = "0.14"
sysinfo = { version = "0.38", features = [] }
futures = "0.3"
libc = "0.2"
mime_guess = "2.0.5"

[build-dependencies]


[profile.release]
# opt-level = 'z' # Optimize for size
# lto = true
# codegen-units = 1

lto = true
strip = true
opt-level = 's'
codegen-units = 3
